Полный дебаг прошел успешно