@@ -1,13 +1,14 @@
 package com.cookieshop.controller;
 
 import com.cookieshop.dto.OrderDTO;
-import com.cookieshop.entity.User;
 import com.cookieshop.repository.UserRepository;
 import com.cookieshop.service.OrderService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -28,38 +29,32 @@ public class OrderController {
             @RequestHeader(value = "X-User-Id", required = false) Long userId) {
         
         try {
-            // Если userId не передан, используем первого доступного пользователя для тестирования
-            // В будущем нужно получать из токена
+            // Проверка авторизации - userId обязателен
             if (userId == null) {
-                List<User> users = userRepository.findAll();
-                if (users.isEmpty()) {
-                    return ResponseEntity.status(500)
-                        .body(Map.of("error", "No users found in database. Please create a user first."));
-                }
-                userId = users.get(0).getId(); // Используем первого доступного пользователя
-            } else {
-                // Проверяем, существует ли указанный пользователь
-                if (!userRepository.findById(userId).isPresent()) {
-                    List<User> users = userRepository.findAll();
-                    if (users.isEmpty()) {
-                        return ResponseEntity.status(500)
-                            .body(Map.of("error", "User with id " + userId + " not found and no users available."));
-                    }
-                    // Используем первого доступного пользователя
-                    userId = users.get(0).getId();
-                }
+                Map<String, String> response = new HashMap<>();
+                response.put("error", "Авторизация необходима для создания заказа. Пожалуйста, войдите в систему.");
+                return ResponseEntity.status(401).body(response);
+            }
+            
+            // Проверяем, существует ли указанный пользователь
+            if (!userRepository.findById(userId).isPresent()) {
+                Map<String, String> response = new HashMap<>();
+                response.put("error", "Пользователь с id " + userId + " не найден. Пожалуйста, войдите в систему снова.");
+                return ResponseEntity.status(401).body(response);
             }
             
             OrderDTO order = orderService.createOrder(orderData, userId);
             return ResponseEntity.ok(order);
         } catch (RuntimeException e) {
             e.printStackTrace();
-            return ResponseEntity.status(500)
-                .body(Map.of("error", e.getMessage()));
+            Map<String, String> response = new HashMap<>();
+            response.put("error", e.getMessage());
+            return ResponseEntity.status(500).body(response);
         } catch (Exception e) {
             e.printStackTrace();
-            return ResponseEntity.status(500)
-                .body(Map.of("error", "Internal server error: " + e.getMessage()));
+            Map<String, String> response = new HashMap<>();
+            response.put("error", "Internal server error: " + e.getMessage());
+            return ResponseEntity.status(500).body(response);
         }
     }
     
@@ -69,7 +64,7 @@ public class OrderController {
         
         // Если userId не передан, возвращаем пустой список
         if (userId == null) {
-            return ResponseEntity.ok(List.of());
+            return ResponseEntity.ok(Collections.emptyList());
         }
         
         List<OrderDTO> orders = orderService.getOrdersByUserId(userId);
@@ -82,8 +77,9 @@ public class OrderController {
             OrderDTO order = orderService.getOrderById(id);
             return ResponseEntity.ok(order);
         } catch (RuntimeException e) {
-            return ResponseEntity.status(404)
-                .body(Map.of("error", e.getMessage()));
+            Map<String, String> response = new HashMap<>();
+            response.put("error", e.getMessage());
+            return ResponseEntity.status(404).body(response);
         }
     }
 }
